ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v4/inventory.json.sha512
3f1b4b1316dbe17fb6ce0a88b3f6164faefd205fabe49da0dfd168a47fb50c3711434b3389814c90ad30bc635ec7f29e398dfa57e7fa3faf800763f661b37cb0  inventory.json
